--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <img src="static/logo.png" alt="Sportisimo Logo" class="logo">
     <div class="info-box">
       <div id="datumcas"></div>
-      <div><tag>Vytvořil Martin Štancl</tag></div>
+      <tag>Vytvořil Martin Štancl</tag>
     </div>
   </header>
 
@@ -73,7 +73,6 @@
     <a href="picking.html">Picking</a>
     <a href="prichody.html">Příchody</a>
     <a href="plan_smen.html">Plán směn</a>
-    <a href="tisk.html">Tisk</a>
     <a href="barcode.html">Barcode</a>
     <a href="zony.html">Zóny</a>
     <a href="bra_pc.html">Wait BRA</a>
